--- a/app/src/main/res/layout/fragment_page_details.xml
+++ b/app/src/main/res/layout/fragment_page_details.xml
@@ -13,6 +13,16 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:theme="@style/myToolbarTheme"/>
+    <ProgressBar
+        android:id="@+id/pbDetails"
+        android:layout_width="match_parent"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_height="wrap_content"
+        android:indeterminateOnly="true"
+        android:layout_gravity="top"
+        android:layout_marginTop="-10dp"
+        android:visibility="invisible"
+        />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cvDetails"
@@ -20,7 +30,7 @@
         android:layout_height="match_parent"
         app:contentPadding="4dp"
         app:cardElevation="8dp"
-        android:layout_margin="4dp">
+       >
 
         <WebView
             android:id="@+id/wvDetails"
