--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,19 @@
     </style>
 
     <style name="myToolbarTheme"  parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+
         ....
         <item name="colorControlNormal">@android:color/white</item>
     </style>
 
+    <style name="TextLabel" parent="Theme.AppCompat.Light.NoActionBar">
+
+    <item name="android:textColorHint">@android:color/darker_gray</item>
+    <item name="android:textSize">14sp</item>
+
+    <item name="colorAccent">@android:color/black</item>
+    <item name="colorControlNormal">@android:color/black</item>
+    <item name="colorControlActivated">@android:color/black</item>
+
+    </style>
 </resources>
